--- a/index.html
+++ b/index.html
@@ -1800,7 +1800,7 @@ document.getElementById("get-all-current").addEventListener("click", function ()
         </div>
     </div>
     <script src="arjunane_table.js"></script>
-    <script src="json/main.js"></script>
+    <script src="sample-json/main.js"></script>
 </body>
 
 </html>
