change 'home' to 'installation'

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="p-x">
                 <h3>Tutorials</h3>
                 <ul>
-                    <li><a class="choose-doc active" href="#home">Home</a></li>
+                    <li><a class="choose-doc active" href="#installation">Installation</a></li>
                     <li><a class="choose-doc" href="#simple-replace">Simple Replace</a></li>
                     <li><a class="choose-doc" href="#simple-init">Simple Init</a></li>
                     <li><a class="choose-doc" href="#objects">Objects Parameters</a></li>
@@ -109,13 +109,26 @@
         </div>
     </div>
     <div class="p-x">
-        <div class="show-doc active" id="home">
+        <div class="show-doc active" id="installation">
             <h1>Welcome to Arjunane Table documentation</h1>
             <div class="p-x">
+                <div class="col-mx">
+                    <strong>Arjunane Table</strong> is a simple script for processing data inside Table tags
+                </div>
                 <strong>Required : </strong>
                 <ul>
                     <li>arjunane_table.js <strong>OR</strong> arjunane_table.min.js</li>
                 </ul>
+                <h3>Example</h3>
+                <div class="bg-b col-mc">
+                    <pre>
+&lt;script src="arjunane_table.js">&lt;/script>
+<strong>OR</strong>
+&lt;script src="arjunane_table.min.js">&lt;/script></pre>
+                </div>
+                <div class="col-mx">
+                    <h3 class="dis-ib">NOTE:</h3> Please put <strong>arjunane_table.min.css</strong> (Arjunane CSS) in the same directory (folder)
+                </div>
             </div>
         </div>
 
